# tkinter-rs

./: .editorconfig  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml  futurama-quotes.txt  rustfmt.toml  rusty-hook.toml
examples/: embed_tcl.rs  embed_tk.rs  embed_tk_manual.rs
src/: bz2.rs  lib.rs  snappy.rs  tcl.rs  tk.rs
